--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7677d1">  <td>23/04/25 01:36:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Title()[pri:1, instance:testLayer.LoginTest@158d2680]">Title</td> 
+<tr bgcolor="7677d1">  <td>23/04/25 22:28:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login(java.lang.String,java.lang.String)[pri:2, instance:testLayer.LoginTest@77847718]">Login</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>23/04/25 01:36:44</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.close()[pri:0, instance:testLayer.LoginTest@158d2680]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>23/04/25 01:36:44</td>   <td>-90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initsetup()[pri:0, instance:testLayer.LoginTest@158d2680]">&gt;&gt;initsetup</td> 
+<tr bgcolor="7677d1">  <td>23/04/25 22:28:14</td>   <td>-12023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Title()[pri:1, instance:testLayer.LoginTest@77847718]">Title</td> 
+  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/04/25 22:28:30</td>   <td>4393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.close()[pri:0, instance:testLayer.LoginTest@77847718]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/04/25 22:28:30</td>   <td>4393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.close()[pri:0, instance:testLayer.LoginTest@77847718]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/04/25 22:28:21</td>   <td>-5425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initsetup()[pri:0, instance:testLayer.LoginTest@77847718]">&gt;&gt;initsetup</td> 
+<td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>23/04/25 22:28:21</td>   <td>-5425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initsetup()[pri:0, instance:testLayer.LoginTest@77847718]">&gt;&gt;initsetup</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
 </table>
